# asp_db

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  db_source.cmake  utils_source.cmake  vcpkg_install.cmd
examples/: .gitignore  CMakeLists.txt
examples/meta/: example_tables.h  main.cpp  meta.h
examples/meta_example/: CMakeLists.txt  example_tables.h  main.cpp  meta.h
examples/zoo/: CMakeLists.txt  animals.h  main.cpp
include/asp_db/: db_append_functor.h  db_connection.h  db_connection_firebird.h  db_connection_manager.h  db_connection_postgre.h  db_defines.h  db_expression.h  db_queries_setup.h  db_queries_setup_select.h  db_query.h  db_tables.h  db_where.h
source/: db_append_functor.h  db_connection.cpp  db_connection.h  db_connection_firebird.cpp  db_connection_manager.cpp  db_connection_manager.h  db_connection_postgre.cpp  db_connection_postgre.h  db_defines.cpp  db_defines.h  db_expression.cpp  db_expression.h  db_queries_setup.cpp  db_queries_setup.h  db_queries_setup_select.cpp  db_queries_setup_select.h  db_query.cpp  db_query.h  db_tables.cpp  db_tables.h  db_where.h
source/database/: db_connection_manager.cpp  db_connection_manager.h  db_connection_postgre.cpp  db_connection_postgre.h  db_defines.cpp  db_defines.h  db_queries_setup.h  db_query.h
source/utils/: Common.cpp  Common.h  ErrorWrap.cpp  ErrorWrap.h  Logging.cpp
tests/: CMakeLists.txt  test_connection.cpp  test_expression.cpp  test_queries.cpp  test_tables.cpp
tests/full/: CMakeLists.txt
tests/full/database/: database_tests.cmake  test_queries.cpp  test_tables.cpp
tests/full/utils/: test_logging.cpp
